--- a/00_Mvc/Views/Juego/Index.cshtml
+++ b/00_Mvc/Views/Juego/Index.cshtml
@@ -85,7 +85,7 @@
                                             </div>
                                             <h4>@Html.DisplayFor(modelItem => item.nombre)<br>
                                             <span>Desarrollador :@Html.DisplayFor(modelItem => item.Desarrollador.nombre)</span><br>
-                                            <span>Desarrollador :@Html.DisplayFor(modelItem => item.Distribuidor.nombre)</span>
+                                            <span>Distribuidor :@Html.DisplayFor(modelItem => item.Distribuidor.nombre)</span>
                                             
                                             </h4>
                                             <ul>
