--- a/00_Mvc/Views/Cliente_Juego/Details.cshtml
+++ b/00_Mvc/Views/Cliente_Juego/Details.cshtml
@@ -63,7 +63,7 @@
                     <!-- ***** Banner Start ***** -->
                     <!-- ***** Banner End ***** -->
                     <!-- ***** Most Popular Start ***** -->
-                    @*<h2>Details</h2>
+                    <h2>Details</h2>
 
                         <div>
                             <h4>Cliente_Juego</h4>
@@ -90,8 +90,8 @@
                         <p>
                             @Html.ActionLink("Edit", "Edit", new { id = Model.id }) |
                             @Html.ActionLink("Back to List", "Index")
-                        </p>*@
-                    <div id="Cliente_JuegoOtraPartialView"></div>
+                        </p>
+                    
                     <!-- ***** Most Popular End ***** -->
                     <!-- ***** Gaming Library Start ***** -->
                     <!-- ***** Gaming Library End ***** -->
@@ -126,111 +126,3 @@
 </html>
 
 
-<script>function cliente_juego(param) {… }</script>
-
-<script type="text/javascript">
-
-
-
-
-    document.body.onload = function () {
-
-        cliente_juego(@miId, 0);
-
-    }
-
-
-
-    function cliente_juego(param1, param2) {
-
-        var apiUrl = 'https://localhost:44357/Api/Cliente_Juegos/';
-
-
-
-        if (param1 > 0) {
-
-            //apiUrl = apiUrl + "/" + param1 + "/" + siguente;
-
-            //var boolSiguiente = 0;
-
-            //if (param2 != null && param2 > 0) {
-
-            //    boolSiguiente = 1;
-
-            //}
-
-            apiUrl = apiUrl + "?id=" + param1 + "&siguiente=" + param2;
-
-            //llamamos a un objeto de la librería jQuery y le pasamos la apiUrl
-
-            $.ajax(
-
-                {
-
-                    //parámetros de configuración del objeto Ajax de jQuery
-
-                    type: "GET", //HTTP GET Method
-
-                    url: apiUrl//, // Controller/View
-
-                    //data: No es necesario: Es GET
-
-                    //el objeto nos muestra lo que le ha devuelto la api como parámetro: "res"
-
-                }).done(function (res) {
-
-                    //Enviamos el jSon "res" al EmpleadosMvcController
-
-                    //método: _EmpleadoMvcOtraPartialView(res)
-
-                    $.ajax(
-
-                        {
-
-                            type: "POST", //HTTP POST Method
-
-                            //url: "_EmpleadoMvcOtraPartialView", // Controller/View
-
-                            url: "../_Cliente_JuegoOtraPartialView", // Controller/View
-
-                            data: res
-
-                            //Nos devuelve una respuesta "resDeLaRes"
-
-                            //Que es un string con el html de la vista _EmpleadoMvcOtraPartialView
-
-                        }).done(function (resDeLaRes) {
-
-                            //Borramos lo que pueda haber en todos los div de la Class = miClase
-
-                            //$('.miClase').empty();
-
-                            //Cargamos la Vista Html dentro del <div>
-
-                            $('#Cliente_JuegoOtraPartialView').empty().append(resDeLaRes);
-
-                        }).fail(function (resDeLaRes) {
-
-                            console.log(resDeLaRes);
-
-                        }).always(function (resDeLaRes) {
-
-                            console.log(resDeLaRes);
-
-                        });
-
-                }).fail(function (res) {
-
-                    console.log(res);
-
-                }).always(function (res) {
-
-                    console.log(res);
-
-                });
-
-        }
-
-    }
-
-</script> 
