--- a/00_Mvc/Views/Juego/Create.cshtml
+++ b/00_Mvc/Views/Juego/Create.cshtml
@@ -156,14 +156,14 @@
 
     <!-- Scripts -->
     <!-- Bootstrap core JavaScript -->
-    <script src="~/Content/vendor/jquery/jquery.min.js"></script>
+    @*<script src="~/Content/vendor/jquery/jquery.min.js"></script>
     <script src="~/Content/vendor/bootstrap/js/bootstrap.min.js"></script>
 
     <script src="~/Scripts/js/isotope.min.js"></script>
     <script src="~/Scripts/js/owl-carousel.js"></script>
     <script src="~/Scripts/js/tabs.js"></script>
     <script src="~/Scripts/js/popup.js"></script>
-    <script src="~/Scripts/js/custom.js"></script>
+    <script src="~/Scripts/js/custom.js"></script>*@
 
 
 </body>
