--- a/00_Mvc/Views/Cliente_Juego/Index.cshtml
+++ b/00_Mvc/Views/Cliente_Juego/Index.cshtml
@@ -42,7 +42,7 @@
 <body>
 
     <!-- ***** Preloader Start ***** -->
-    <div id="js-preloader" class="js-preloader">
+    @*<div id="js-preloader" class="js-preloader">
         <div class="preloader-inner">
             <span class="dot"></span>
             <div class="dots">
@@ -51,7 +51,7 @@
                 <span></span>
             </div>
         </div>
-    </div>
+    </div*@>
     <!-- ***** Preloader End ***** -->
     <!-- ***** Header Area Start ***** -->
     <!-- ***** Header Area End ***** -->
@@ -99,7 +99,7 @@
                         }
 
                     </table>
-                    <div id="Cliente_JuegoOtraPartialView"></div>
+                    
                     <!-- ***** Most Popular End ***** -->
                     <!-- ***** Gaming Library Start ***** -->
                     <!-- ***** Gaming Library End ***** -->
@@ -119,14 +119,14 @@
 
     <!-- Scripts -->
     <!-- Bootstrap core JavaScript -->
-    <script src="~/Content/vendor/jquery/jquery.min.js"></script>
+    @*<script src="~/Content/vendor/jquery/jquery.min.js"></script>
     <script src="~/Content/vendor/bootstrap/js/bootstrap.min.js"></script>
 
     <script src="~/Scripts/js/isotope.min.js"></script>
     <script src="~/Scripts/js/owl-carousel.js"></script>
     <script src="~/Scripts/js/tabs.js"></script>
     <script src="~/Scripts/js/popup.js"></script>
-    <script src="~/Scripts/js/custom.js"></script>
+    <script src="~/Scripts/js/custom.js"></script>*@
 
 
 </body>
