--- a/00_Mvc/Views/Cliente_Juego/_Cliente_JuegoOtraPartialView.cshtml
+++ b/00_Mvc/Views/Cliente_Juego/_Cliente_JuegoOtraPartialView.cshtml
@@ -1,125 +1,57 @@
 ﻿@model _04_Data.Datos.Cliente_Juego
 
+<h2>Details</h2>
+
+<div>
+    <h4>Cliente_Juego</h4>
+    <hr />
+    <dl class="dl-horizontal">
+        <dt>
+            @Html.DisplayNameFor(model => model.Cliente.nombre)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Cliente.nombre)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.Juego.nombre)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Juego.nombre)
+        </dd>
+
+    </dl>
+</div>
 @{
-    ViewBag.Title = "Details";
-    int miId = Model.id + 1;
+    string onClickAnterior = "Cliente_JuegoApi(" + Model.id + "," + 0 + ")";
+    string onClickSiguiente = "Cliente_JuegoApi(" + Model.id + "," + 1 + ")";
+
+}
+<input class="btn btn-transparent smooth-scroll;" style="border-width: 2px; float: left; font-size: 12px; border-color: aqua" value="Anterior" onclick=@onClickAnterior>
+<input class="btn btn-transparent smooth-scroll;" style="border-width: 2px; float: right; font-size: 12px; border-color: aqua" value="Siguiente" onclick=@onClickSiguiente>
+@Html.ActionLink("Edit", "Edit", new { id = Model.id }) |
+@Html.ActionLink("Back to List", "Index")
+<!--<div class="container">
+    <div class="row">
+        <div class="col-lg-12">
+            <div class="page-content">-->
+
+                <!-- ***** Banner Start ***** -->
+                <!-- ***** Banner End ***** -->
+                <!-- ***** Most Popular Start ***** -->
+                <!-- ***** Most Popular End ***** -->
+                <!-- ***** Gaming Library Start ***** -->
+                <!-- ***** Gaming Library End ***** -->
+            <!--</div>
+        </div>
+    </div>
+</div>-->
+@{
+    Layout = null;
 }
 
 
-
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
-
-    <title>Cyborg - Awesome HTML5 Template</title>
-
-    <!-- Bootstrap core CSS -->
-    <link href="~/Content/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-
-
-    <!-- Additional CSS Files -->
-    <link rel="stylesheet" href="~/Content/css/fontawesome.css">
-    <link rel="stylesheet" href="~/Content/css/templatemo-cyborg-gaming.css">
-    <link rel="stylesheet" href="~/Content/css/owl.css">
-    <link rel="stylesheet" href="~/Content/css/animate.css">
-    <link rel="stylesheet" href="https://unpkg.com/swiper@7/swiper-bundle.min.css" />
-    <!--
-
-    TemplateMo 579 Cyborg Gaming
-
-    https://templatemo.com/tm-579-cyborg-gaming
-
-    -->
-</head>
-
-<body>
-
-    <!-- ***** Preloader Start ***** -->
-    <div id="js-preloader" class="js-preloader">
-        <div class="preloader-inner">
-            <span class="dot"></span>
-            <div class="dots">
-                <span></span>
-                <span></span>
-                <span></span>
-            </div>
-        </div>
-    </div>
-    <!-- ***** Preloader End ***** -->
-    <!-- ***** Header Area Start ***** -->
-    <!-- ***** Header Area End ***** -->
-
-    <div class="container">
-        <div class="row">
-            <div class="col-lg-12">
-                <div class="page-content">
-
-                    <!-- ***** Banner Start ***** -->
-                    <!-- ***** Banner End ***** -->
-                    <!-- ***** Most Popular Start ***** -->
-                    <h2>Details</h2>
-
-                    <div>
-                        <h4>Cliente_Juego</h4>
-                        <hr />
-                        <dl class="dl-horizontal">
-                            <dt>
-                                @Html.DisplayNameFor(model => model.Cliente.nombre)
-                            </dt>
-
-                            <dd>
-                                @Html.DisplayFor(model => model.Cliente.nombre)
-                            </dd>
-
-                            <dt>
-                                @Html.DisplayNameFor(model => model.Juego.nombre)
-                            </dt>
-
-                            <dd>
-                                @Html.DisplayFor(model => model.Juego.nombre)
-                            </dd>
-
-                        </dl>
-                    </div>
-                   
-
-                    <!-- ***** Most Popular End ***** -->
-                    <!-- ***** Gaming Library Start ***** -->
-                    <!-- ***** Gaming Library End ***** -->
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <footer>
-        <div class="container">
-            <div class="row">
-
-            </div>
-        </div>
-    </footer>
-
-
-    <!-- Scripts -->
-    <!-- Bootstrap core JavaScript -->
-    <script src="~/Content/vendor/jquery/jquery.min.js"></script>
-    <script src="~/Content/vendor/bootstrap/js/bootstrap.min.js"></script>
-
-    <script src="~/Scripts/js/isotope.min.js"></script>
-    <script src="~/Scripts/js/owl-carousel.js"></script>
-    <script src="~/Scripts/js/tabs.js"></script>
-    <script src="~/Scripts/js/popup.js"></script>
-    <script src="~/Scripts/js/custom.js"></script>
-
-
-</body>
-
-</html>
 
 
