--- a/00_Mvc/Views/Desarrollador/Create.cshtml
+++ b/00_Mvc/Views/Desarrollador/Create.cshtml
@@ -42,16 +42,7 @@
 <body>
 
     <!-- ***** Preloader Start ***** -->
-    <div id="js-preloader" class="js-preloader">
-        <div class="preloader-inner">
-            <span class="dot"></span>
-            <div class="dots">
-                <span></span>
-                <span></span>
-                <span></span>
-            </div>
-        </div>
-    </div>
+    
     <!-- ***** Preloader End ***** -->
     <!-- ***** Header Area Start ***** -->
     <!-- ***** Header Area End ***** -->
@@ -125,14 +116,14 @@
 
     <!-- Scripts -->
     <!-- Bootstrap core JavaScript -->
-    @*<script src="~/Content/vendor/jquery/jquery.min.js"></script>
+    <script src="~/Content/vendor/jquery/jquery.min.js"></script>
     <script src="~/Content/vendor/bootstrap/js/bootstrap.min.js"></script>
 
     <script src="~/Scripts/js/isotope.min.js"></script>
     <script src="~/Scripts/js/owl-carousel.js"></script>
     <script src="~/Scripts/js/tabs.js"></script>
     <script src="~/Scripts/js/popup.js"></script>
-    <script src="~/Scripts/js/custom.js"></script>*@
+    <script src="~/Scripts/js/custom.js"></script>
 
 
 </body>
